src/css/materialize.css
/* ... */
 
 
 
 
 /* ==========================================================================
   $Custom Content
   ========================================================================== */
	.white-nav {
    	color: #FFF; 
	}
	
	.hr-nav {
		border: 0;
    	height: 0;
    	border-top: 1px solid #e0f7fa;
		width: 90%;
		text-align:right;
		margin-right: 0;
	}
	
	ul.side-nav.fixed li.profile-badge {
		line-height: 54px;
	}
	
	ul.side-nav.fixed li.profile-badge:hover {
		background-color: inherit;
	}
	
	.card-space-div {
		padding-top: 20px;
	}
	
	.search form {
		bottom: 20px;
		width: 100%;
	}
	
	.search input {
		font-size: 16px;
		font-family: inherit;
		color: #e0e0e0;
	}
	
	.search input {
		border: 0;
		border-radius: 3px;
		padding: 10px;
		box-shadow: 0 1px 3px rgba(0,0,0,0.3);
		background: #fff;
		width: 100%;
		box-sizing: border-box;
	}
	
	.search input[type=text]:focus {
		border: 0;
		border-radius: 3px;
		padding: 10px;
		box-shadow: 0 1px 3px rgba(0,0,0,0.3);
		background: #fff;
		width: 100%;
		box-sizing: border-box;
	}
	
	.search ::-webkit-input-placeholder {
   		color: #e0e0e0;
	}
		.search ::-webkit-input-placeholder::before { 
			font-family: "Material-Design-Icons"; 
			size: 20px;
			content: "\e65f  ";
		}

	.search :-moz-placeholder { /* Firefox 18- */
   		color: #e0e0e0;  
	}
		:-moz-placeholder::before  { 
			font-family: "Material-Design-Icons"; 
			size: 20px;
			content: "\e65f  ";
		}

	.search ::-moz-placeholder {  /* Firefox 19+ */
   		color: #e0e0e0;  
	}
		::-moz-placeholder::before  { 
			font-family: "Material-Design-Icons";
			size: 20px; 
			content: "\e65f  ";
		}

	.search :-ms-input-placeholder {  
   		color: #e0e0e0;  
	}
		:-ms-input-placeholder::before  {
			font-family: "Material-Design-Icons"; 
			size: 20px;
			content: "\e65f  ";
		}
		
	.number-of-card {
   		color: #bdbdbd;  
		font-size: 1.75rem;
		font-weight: 200;
		text-align: right;
	}
		
	.card-center {
		  display: -webkit-box;
		  display: -moz-box;
		  display: -ms-flexbox;
		  display: -webkit-flex;
		  display: flex;
		  -webkit-flex-align: center;
		  -ms-flex-align: center;
		  -webkit-align-items: center;
		  align-items: center;
		  -webkit-justify-content: center;
		  justify-content: center; 
	}
	
	.s-sort {
		color: #bdbdbd;
		text-decoration: none;  
	}
		.s-sort a {
			color: #bdbdbd;
			text-decoration: none;  
		}
		
	video#bgvid {
		position: fixed; 
		right: 0; 
		bottom: 0;
		min-width: 100%; 
		min-height: 100%;
		width: auto; 
		height: auto; 
		z-index: -100;
		background: url(../vid/poster.jpg) no-repeat;
		background-size: cover;
	}
	
@media screen and (max-device-width: 800px) {
	body { background: url(../vid/poster.jpg) #000 no-repeat center center fixed; }
	#bgvid { display: none; }
}

	
	.modal {
		width: 100%;
		max-height: 100%;
	}
	
	.splash {
		color: #fff;
		padding-top: 20%;
	}
	
	.splash .modal {
		background-color: #fff;
		color: #bdbdbd;	
	}
	
	.modal-text {
		width: 55%;
		margin: auto;
	}
	
@media only screen and (max-width : 992px) {
	.modal-text {
		width: 100%;
		margin: auto;
	}
}
	
	.modal-x {
		cursor: pointer;
		color: #eeeeee;
		align: right;
		margin-right: 0;
		font-size: 3rem;
		top: -10;
	}
	
	.modal-x:hover {
		color: #00bcd4;
	}
	
	.modal-trigger {
		top: 10px;
	}
	
	.form-text {
		color: #9e9e9e;
	}
	
	.z-depth-4, .modal {
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
		box-shadow: none; }
	



	
 
 
 

